--- a/Task3/Test-Cases/TC01.md
+++ b/Task3/Test-Cases/TC01.md
@@ -1,2 +1,18 @@
-# Test Case 01
+# TC_01: Register a new user with valid phone number and verification code
 
+[![Made by Adam Cegiełka](https://img.shields.io/badge/made%20by%20-Adam%20Cegielka-blue.svg?style=flat-square)](https://adamcegielka.pl)
+[![Telegram](https://img.shields.io/badge/Testing%20App-Telegram-24A1DE.svg?logo=telegram)](https://web.telegram.org)
+
+<br>
+
+| # | Elements | Description |
+| --- | --- | --- |
+| 1 | TC ID: | TC_01 |
+| 2 | Title: | Register a new user with valid phone number and verification code |
+| 3 | Precondition: |  |
+| 4 | Test Steps: |  |
+| 5 | Expected Result: |  |
+| 6 | Pass/Fail: |  |
+| 7 | Priority: |  |
+| 8 | Environment: | |
+| 9 | Comments: |  |
