docs: add template for tc

--- a/Task3/Test-Cases/TC04.md
+++ b/Task3/Test-Cases/TC04.md
@@ -1,2 +1,18 @@
-# Test Case 04
+# TC_04: Login with incorrect password
 
+[![Made by Adam Cegiełka](https://img.shields.io/badge/made%20by%20-Adam%20Cegielka-blue.svg?style=flat-square)](https://adamcegielka.pl)
+[![Telegram](https://img.shields.io/badge/Testing%20App-Telegram-24A1DE.svg?logo=telegram)](https://web.telegram.org)
+
+<br>
+
+|  | Elements | Description |
+| --- | --- | --- |
+| 1 | TC ID: | TC_04 |
+| 2 | Title: | Login with incorrect password |
+| 3 | Precondition: |  |
+| 4 | Test Steps: |  |
+| 5 | Expected Result: |  |
+| 6 | Pass/Fail: |  |
+| 7 | Priority: |  |
+| 8 | Environment: |  |
+| 9 | Comments: |  |
