docs: add template for tc

--- a/Task3/Test-Cases/TC06.md
+++ b/Task3/Test-Cases/TC06.md
@@ -5,7 +5,7 @@
 
 <br>
 
-|  | Elements | Description |
+| # | Elements | Description |
 | --- | --- | --- |
 | 1 | TC ID: | TC_06 |
 | 2 | Title: | Send a message when there is no internet connection |
