feat(docs): add test case for TC_01

--- a/Task3/Test-Cases/TC01.md
+++ b/Task3/Test-Cases/TC01.md
@@ -9,10 +9,10 @@
 | --- | --- | --- |
 | 1 | TC ID: | TC_01 |
 | 2 | Title: | Register a new user with valid phone number and verification code |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: | |
-| 9 | Comments: |  |
+| 3 | Precondition: | App installed, user not previously registered |
+| 4 | Test Steps: | 1. Open app<br>2. Navigate to registration screen<br>3. Enter valid phone number<br>4. Submit phone number<br>5. Enter received verification code<br>6. Submit verification code |
+| 5 | Expected Result: | User is successfully registered and proceeds to the main chat screen |
+| 6 | Pass/Fail: | 	Pass |
+| 7 | Priority: | High |
+| 8 | Environment: | Android 14, Telegram v10.12.0 |
+| 9 | Comments: | Ensure the phone number is not used in the system prior to this test |
