--- a/Task3/Test-Cases/TC02.md
+++ b/Task3/Test-Cases/TC02.md
@@ -5,14 +5,14 @@
 
 <br>
 
-|  | Elements | Description |
+| # | Elements | Description |
 | --- | --- | --- |
 | 1 | TC ID: | TC_02 |
 | 2 | Title: | Attempt registration using an invalid phone number |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 3 | Precondition: | App installed, user not previously registered |
+| 4 | Test Steps: | 1. Open app<br>2. Navigate to registration screen<br>3. Enter invalid phone number (e.g., too few digits)<br>4. Submit phone number |
+| 5 | Expected Result: | User receives an error message indicating the phone number is not valid |
+| 6 | Pass/Fail: | Pass |
+| 7 | Priority: | Medium |
+| 8 | Environment: | iOS 17, Telegram v10.12.0 |
+| 9 | Comments: | Test should verify that the app correctly validates phone number format |
