feat(docs): add test case for TC_03

--- a/Task3/Test-Cases/TC03.md
+++ b/Task3/Test-Cases/TC03.md
@@ -5,14 +5,14 @@
 
 <br>
 
-|  | Elements | Description |
+| # | Elements | Description |
 | --- | --- | --- |
 | 1 | TC ID: | TC_03 |
 | 2 | Title: | Login with correct user credentials |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 3 | Precondition: | User is registered and has valid login credentials |
+| 4 | Test Steps: | 1. Open app<br>2. Navigate to login screen<br>3. Enter registered phone number<br>4. Enter correct password<br>5. Submit login details |
+| 5 | Expected Result: | User is successfully logged in and directed to the main chat screen |
+| 6 | Pass/Fail: | Pass |
+| 7 | Priority: | High |
+| 8 | Environment: | Android 14, Telegram v10.12.0 |
+| 9 | Comments: | This test verifies that the app correctly authenticates a user with valid credentials. |
