--- a/Task3/Test-Cases/TC04.md
+++ b/Task3/Test-Cases/TC04.md
@@ -5,14 +5,14 @@
 
 <br>
 
-|  | Elements | Description |
+| # | Elements | Description |
 | --- | --- | --- |
 | 1 | TC ID: | TC_04 |
 | 2 | Title: | Login with incorrect password |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 3 | Precondition: | User is registered |
+| 4 | Test Steps: | 1. Open app<br>2. Navigate to login screen<br>3. Enter registered phone number<br>4. Enter incorrect password<br>5. Submit login details |
+| 5 | Expected Result: | User receives an error message indicating that the password is incorrect |
+| 6 | Pass/Fail: | 	Pass |
+| 7 | Priority: | Medium |
+| 8 | Environment: | iOS 17, Telegram v10.12.0 |
+| 9 | Comments: | This test ensures that the system properly handles invalid login attempts. |
