feat(docs): add test case for TC_05

--- a/Task3/Test-Cases/TC05.md
+++ b/Task3/Test-Cases/TC05.md
@@ -9,10 +9,10 @@
 | --- | --- | --- |
 | 1 | TC ID: | TC_05 |
 | 2 | Title: | Send a text message to a friend |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 3 | Precondition: | User is logged in and has at least one friend added in their contacts |
+| 4 | Test Steps: | 1. Open app<br>2. Navigate to a friend's chat window<br>3. Enter a text message in the message input area<br>4. Tap the send button |
+| 5 | Expected Result: | The message is displayed in the chat window, indicating successful sending |
+| 6 | Pass/Fail: | Pass |
+| 7 | Priority: | High |
+| 8 | Environment: | Android 14, Telegram v10.12.0 |
+| 9 | Comments: | Ensure the message sends without errors and appears immediately in the chat |
