feat(docs): add test case for TC_06

--- a/Task3/Test-Cases/TC06.md
+++ b/Task3/Test-Cases/TC06.md
@@ -9,10 +9,10 @@
 | --- | --- | --- |
 | 1 | TC ID: | TC_06 |
 | 2 | Title: | Send a message when there is no internet connection |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 3 | Precondition: | User is logged in and has an active chat window open |
+| 4 | Test Steps: | 1. Open app<br>2. Disable device's internet connection (Wi-Fi and mobile data)<br>3. Navigate to a friend's chat window<br>4. Enter a text message<br>5. Tap the send button |
+| 5 | Expected Result: | An error message or icon appears, indicating the message could not be sent |
+| 6 | Pass/Fail: | Pass |
+| 7 | Priority: | Medium |
+| 8 | Environment: | Android 14, Telegram v10.12.0  |
+| 9 | Comments: | This test checks the app's ability to handle message sending failures due to no internet connection |
