feat(docs): add test case for TC_07

--- a/Task3/Test-Cases/TC07.md
+++ b/Task3/Test-Cases/TC07.md
@@ -9,10 +9,10 @@
 | --- | --- | --- |
 | 1 | TC ID: | TC_07 |
 | 2 | Title: | Create a group chat with multiple selected contacts |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 3 | Precondition: | User is logged in and has multiple contacts in their contact list |
+| 4 | Test Steps: | 1. Open app<br>2. Navigate to the 'New Group' option<br>3. Select multiple contacts from the contact list<br>4. Enter a group name<br>5. Tap the 'Create' button |
+| 5 | Expected Result: | A new group chat is created and visible in the user's chat list with the selected members |
+| 6 | Pass/Fail: | Pass |
+| 7 | Priority: | High |
+| 8 | Environment: | Android 14, Telegram v10.12.0  |
+| 9 | Comments: | Ensure all selected contacts are added to the group and can receive messages |
