feat(docs): add test case for TC_08

--- a/Task3/Test-Cases/TC08.md
+++ b/Task3/Test-Cases/TC08.md
@@ -1,4 +1,4 @@
-# TC_08: Try to create a group without selecting any contacts
+# TC_08: Create a group without selecting any contacts
 
 [![Made by Adam Cegiełka](https://img.shields.io/badge/made%20by%20-Adam%20Cegielka-blue.svg?style=flat-square)](https://adamcegielka.pl)
 [![Telegram](https://img.shields.io/badge/Testing%20App-Telegram-24A1DE.svg?logo=telegram)](https://web.telegram.org)
@@ -8,11 +8,11 @@
 | # | Elements | Description |
 | --- | --- | --- |
 | 1 | TC ID: | TC_08|
-| 2 | Title: | Try to create a group without selecting any contacts |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 2 | Title: | Create a group without selecting any contacts |
+| 3 | Precondition: | User is logged in |
+| 4 | Test Steps: | 1. Open app<br>2. Navigate to the 'New Group' option<br>3. Do not select any contacts<br>4. Enter a group name<br>5. Tap the 'Create' button |
+| 5 | Expected Result: | A new group is created without any members and is visible in the user’s chat list |
+| 6 | Pass/Fail: | Pass |
+| 7 | Priority: | Medium |
+| 8 | Environment: | Android 14, Telegram v10.12.0  |
+| 9 | Comments: | This test verifies the application’s capability to create a group chat without members, potentially for later addition of members. |
