--- a/Task3/Test-Cases/TC09.md
+++ b/Task3/Test-Cases/TC09.md
@@ -9,10 +9,10 @@
 | --- | --- | --- |
 | 1 | TC ID: | TC_09 |
 | 2 | Title: | Initiate a voice call to a single contact |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 3 | Precondition: | User is logged in and has at least one contact available |
+| 4 | Test Steps: | 1. Open app<br>2. Navigate to the contact list<br>3. Select a contact<br>4. Tap on the voice call button |
+| 5 | Expected Result: | The voice call is initiated, and the user is able to communicate with the selected contact |
+| 6 | Pass/Fail: | Pass |
+| 7 | Priority: | High |
+| 8 | Environment: | Android 14, Telegram v10.12.0  |
+| 9 | Comments: | Ensure that the call connects properly and audio is transmitted clearly |
