feat(docs): add test case for TC_10

--- a/Task3/Test-Cases/TC10.md
+++ b/Task3/Test-Cases/TC10.md
@@ -9,10 +9,10 @@
 | --- | --- | --- |
 | 1 | TC ID: | TC_10 |
 | 2 | Title: | Attempt a voice call without microphone permissions |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 3 | Precondition: | User is logged in and has microphone permission disabled |
+| 4 | Test Steps: | 1. Open app<br>2. Navigate to the contact list<br>3. Select a contact<br>4. Tap on the voice call button |
+| 5 | Expected Result: | The app either prompts the user to enable microphone permissions or informs the user that the call cannot proceed without microphone access |
+| 6 | Pass/Fail: | Pass |
+| 7 | Priority: | Medium |
+| 8 | Environment: | Android 14, Telegram v10.12.0  |
+| 9 | Comments: | This test checks if the app properly handles the scenario where it lacks the necessary permissions to perform a critical function |
