--- a/Task3/Test-Cases/TC11.md
+++ b/Task3/Test-Cases/TC11.md
@@ -9,10 +9,10 @@
 | --- | --- | --- |
 | 1 | TC ID: | TC_11 |
 | 2 | Title: | Initiate a video call to a single contact |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 3 | Precondition: | User is logged in, has at least one contact available, and both parties have stable internet connectivity |
+| 4 | Test Steps: | 1. Open app<br>2. Navigate to the contact list<br>3. Select a contact<br>4. Tap on the video call button |
+| 5 | Expected Result: | The video call is initiated, both video and audio are transmitted clearly between the user and the contact |
+| 6 | Pass/Fail: | Pass |
+| 7 | Priority: | High |
+| 8 | Environment: | Android 14, Telegram v10.12.0  |
+| 9 | Comments: | Ensure that both parties can see and hear each other without interruption |
