--- a/Task3/Test-Cases/TC12.md
+++ b/Task3/Test-Cases/TC12.md
@@ -9,10 +9,10 @@
 | --- | --- | --- |
 | 1 | TC ID: | TC_12 |
 | 2 | Title: | Initiate a video call in an area with poor network connectivity |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 3 | Precondition: | User is logged in and located in an area with poor network connectivity |
+| 4 | Test Steps: | 1. Open app<br>2. Navigate to the contact list<br>3. Select a contact<br>4. Tap on the video call button |
+| 5 | Expected Result: | The app either fails to establish the video call or provides a notification or indicator of poor connectivity affecting call quality |
+| 6 | Pass/Fail: | Pass |
+| 7 | Priority: | Medium |
+| 8 | Environment: | Android 14, Telegram v10.12.0 |
+| 9 | Comments: | This test assesses the app's capability to manage calls under suboptimal network conditions and provide appropriate user feedback |
