--- a/Task3/Test-Cases/TC13.md
+++ b/Task3/Test-Cases/TC13.md
@@ -9,10 +9,10 @@
 | --- | --- | --- |
 | 1 | TC ID: | TC_13 |
 | 2 | Title: | Send an image file from the gallery |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 3 | Precondition: | User is logged in, has access to the gallery, and is in a chat window |
+| 4 | Test Steps: | 1. Open app<br>2. Navigate to a chat window<br>3. Tap the attachment icon<br>4. Select 'Gallery'<br>5. Choose an image file<br>6. Tap 'Send' |
+| 5 | Expected Result: | The image is successfully sent and appears in the chat window |
+| 6 | Pass/Fail: | Pass |
+| 7 | Priority: | High |
+| 8 | Environment: | Android 14, Telegram v10.12.0 |
+| 9 | Comments: | Verify that the image retains quality and is viewable by the recipient |
