--- a/Task3/Test-Cases/TC14.md
+++ b/Task3/Test-Cases/TC14.md
@@ -9,10 +9,10 @@
 | --- | --- | --- |
 | 1 | TC ID: | TC_14 |
 | 2 | Title: | Send a corrupted image file |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 3 | Precondition: | User is logged in and in a chat window with a corrupted image file available |
+| 4 | Test Steps: | 1. Open app<br>2. Navigate to a chat window<br>3. Tap the attachment icon<br>4. Select 'Gallery'<br>5. Choose a corrupted image file<br>6. Tap 'Send' |
+| 5 | Expected Result: | The app either fails to send the image, or a warning/error message is displayed indicating the file is corrupted |
+| 6 | Pass/Fail: | Pass |
+| 7 | Priority: | Medium |
+| 8 | Environment: | Android 14, Telegram v10.12.0  |
+| 9 | Comments: | This test assesses the app's error handling capabilities for corrupted media files |
