--- a/Task3/Test-Cases/TC15.md
+++ b/Task3/Test-Cases/TC15.md
@@ -9,10 +9,10 @@
 | --- | --- | --- |
 | 1 | TC ID: | TC_15 |
 | 2 | Title: | Receive a notification when a new message is received while the app is in the background |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 3 | Precondition: | User is logged in, app notifications are enabled, app is not actively being used |
+| 4 | Test Steps: | 1. Ensure the app is running in the background<br>2. Have another user send a message to the test user<br>3. Observe if a notification appears |
+| 5 | Expected Result: | A notification for the new message appears on the device |
+| 6 | Pass/Fail: | Pass |
+| 7 | Priority: | High |
+| 8 | Environment: | Android 14, Telegram v10.12.0 |
+| 9 | Comments: | Ensure that notifications are timely and contain correct information |
