--- a/Task3/Test-Cases/TC16.md
+++ b/Task3/Test-Cases/TC16.md
@@ -9,10 +9,10 @@
 | --- | --- | --- |
 | 1 | TC ID: | TC_16 |
 | 2 | Title: | Disable notifications in settings and check if any notifications are received |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 3 | Precondition: | User is logged in, notifications are initially enabled |
+| 4 | Test Steps: | 1. Navigate to the app settings<br>2. Disable all notifications for the app<br>3. Have another user send a message to the test user<br>4. Observe if any notifications appear |
+| 5 | Expected Result: | No notifications appear on the device |
+| 6 | Pass/Fail: | Pass |
+| 7 | Priority: | Medium |
+| 8 | Environment: | Android 14, Telegram v10.12.0  |
+| 9 | Comments: | This test checks if the app respects the user's settings to disable notifications |
