--- a/Task3/Test-Cases/TC17.md
+++ b/Task3/Test-Cases/TC17.md
@@ -9,10 +9,10 @@
 | --- | --- | --- |
 | 1 | TC ID: | TC_17 |
 | 2 | Title: | Update profile picture successfully |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 3 | Precondition: | User is logged in, has access to supported image files |
+| 4 | Test Steps: | 1. Open app<br>2. Navigate to user profile settings<br>3. Tap 'Change Profile Picture'<br>4. Select a supported image file from the device<br>5. Confirm and upload the image |
+| 5 | Expected Result: | The profile picture is updated successfully, and the new image is visible on the user's profile |
+| 6 | Pass/Fail: | Pass |
+| 7 | Priority: | High |
+| 8 | Environment: | Android 14, Telegram v10.12.0 |
+| 9 | Comments: | Ensure the image uploads without errors and is properly displayed |
