feat(docs): add test case for TC_18

--- a/Task3/Test-Cases/TC18.md
+++ b/Task3/Test-Cases/TC18.md
@@ -9,10 +9,10 @@
 | --- | --- | --- |
 | 1 | TC ID: | TC_18 |
 | 2 | Title: | Attempt to upload an unsupported file format as profile picture |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 3 | Precondition: | User is logged in, has access to an unsupported file format (e.g., .gif, .tiff) |
+| 4 | Test Steps: | 1. Open app<br>2. Navigate to user profile settings<br>3. Tap 'Change Profile Picture'<br>4. Try to select an unsupported file format<br>5. Attempt to upload the file |
+| 5 | Expected Result: | The app either prevents the file selection or displays an error message after the upload attempt indicating the file format is not supported |
+| 6 | Pass/Fail: | Pass |
+| 7 | Priority: | Medium |
+| 8 | Environment: | Android 14, Telegram v10.12.0 |
+| 9 | Comments: | This test verifies the app's ability to handle error conditions gracefully when users attempt to upload invalid file formats |
