feat(docs): add test case for TC_19

--- a/Task3/Test-Cases/TC19.md
+++ b/Task3/Test-Cases/TC19.md
@@ -9,10 +9,10 @@
 | --- | --- | --- |
 | 1 | TC ID: | TC_19 |
 | 2 | Title: | Search for a contact by name and initiate a chat |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 3 | Precondition: | User is logged in and has contacts added to their Telegram account |
+| 4 | Test Steps: | 1. Open app<br>2. Navigate to the search bar at the top of the home screen<br>3. Type the name of a known contact<br>4. Select the contact from the search results<br>5. Initiate a chat by typing a message and pressing send |
+| 5 | Expected Result: | The search yields the correct contact, and the user is able to send a message |
+| 6 | Pass/Fail: | Pass |
+| 7 | Priority: | High |
+| 8 | Environment: | Environment: | Android 14, Telegram v10.12.0 |
+| 9 | Comments: | Verify that the search function correctly identifies contacts based on partial or full names |
