fix(docs): delete pice of content

--- a/Task3/Test-Cases/TC19.md
+++ b/Task3/Test-Cases/TC19.md
@@ -14,5 +14,5 @@
 | 5 | Expected Result: | The search yields the correct contact, and the user is able to send a message |
 | 6 | Pass/Fail: | Pass |
 | 7 | Priority: | High |
-| 8 | Environment: | Environment: | Android 14, Telegram v10.12.0 |
+| 8 | Environment: | Android 14, Telegram v10.12.0 |
 | 9 | Comments: | Verify that the search function correctly identifies contacts based on partial or full names |
