--- a/Task3/Test-Cases/TC20.md
+++ b/Task3/Test-Cases/TC20.md
@@ -9,10 +9,10 @@
 | --- | --- | --- |
 | 1 | TC ID: | TC_20 |
 | 2 | Title: | Search for a non-existent username |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 3 | Precondition: | User is logged in |
+| 4 | Test Steps: | 1. Open app<br>2. Navigate to the search bar<br>3. Type a username that does not exist in the system<br>4. Observe the results |
+| 5 | Expected Result: | The search yields no results or a message indicating "No contacts found" or similar |
+| 6 | Pass/Fail: | Pass |
+| 7 | Priority: | Medium |
+| 8 | Environment: | Android 14, Telegram v10.12.0  |
+| 9 | Comments: | This test checks the search functionality's ability to handle searches where no actual match exists |
