feat(docs): add test case for TC_21

--- a/Task3/Test-Cases/TC21.md
+++ b/Task3/Test-Cases/TC21.md
@@ -9,10 +9,10 @@
 | --- | --- | --- |
 | 1 | TC ID: | TC_21 |
 | 2 | Title: | Delete a sent message from both ends within the allowed time frame |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 3 | Precondition: | User is logged in, has at least one active chat where messages were recently sent |
+| 4 | Test Steps: | 1. Open app<br>2. Navigate to an active chat<br>3. Send a message<br>4. Select the sent message<br>5. Choose the 'Delete for everyone' option within the time limit (e.g., 1 hour) |
+| 5 | Expected Result: | The message is deleted from the chat on both the sender's and recipient's end |
+| 6 | Pass/Fail: | Pass |
+| 7 | Priority: | High |
+| 8 | Environment: | Android 14, Telegram v10.12.0  |
+| 9 | Comments: | Ensure that the message disappears from both chat histories and verify it within the time constraint specified by the app |
