feat(docs): add test case for TC_22

--- a/Task3/Test-Cases/TC22.md
+++ b/Task3/Test-Cases/TC22.md
@@ -9,10 +9,10 @@
 | --- | --- | --- |
 | 1 | TC ID: | TC_22 |
 | 2 | Title: | Try to delete a message that was sent more than 48 hours ago |
-| 3 | Precondition: |  |
-| 4 | Test Steps: |  |
-| 5 | Expected Result: |  |
-| 6 | Pass/Fail: |  |
-| 7 | Priority: |  |
-| 8 | Environment: |  |
-| 9 | Comments: |  |
+| 3 | Precondition: | User is logged in, has an old message sent over 48 hours ago |
+| 4 | Test Steps: | 1. Open app<br>2. Navigate to the chat containing the old message<br>3. Select the message<br>4. Attempt to delete the message using 'Delete for everyone' |
+| 5 | Expected Result: | The app either does not allow the option to delete for everyone or provides an error message stating the message cannot be deleted |
+| 6 | Pass/Fail: | Pass |
+| 7 | Priority: | Medium |
+| 8 | Environment: | Android 14, Telegram v10.12.0 |
+| 9 | Comments: | This test verifies that the app correctly enforces its rules regarding the time limits for message deletion |
